# json-logic-py

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test_jsonlogic.py  tests.py  tox.ini
.github/workflows/: ci.yml  code_quality.yml
json-logic-py/: __init__.py
json_logic/: __init__.py  meta.py  typing.py
json_logic/meta/: __init__.py  base.py  expressions.py  operations.py
tests/: conftest.py  test_introspection.py  test_jsonlogic.py  test_shared.py
tests/introspection/: test_expression_processing.py  test_representation.py
