[options]
zip_safe = False
include_package_data = True
packages = find:
tests_require =
    tox
    pytest
    freezegun
    isort
    black
    coverage

[options.extras_require]
tests =
    tox
    pytest
    freezegun
    isort
    black
    coverage
pep8 = flake8
coverage = coverage
release =
    bumpversion
    twine

# 3rd party configuration

[aliases]
test = pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,.tox,.history,.eggs
; skip_glob =
not_skip = __init__.py

[tool:pytest]
testpaths = tests.py


[pep8]
max-line-length = 119
exclude=env,.tox,doc

[flake8]
max-line-length = 119
exclude = env,.tox,doc

[coverage:run]
source =
    json_logic
branch = True

[coverage:report]
exclude_lines =
    no cov
    no qa
    noqa
    pragma: no cover
    if __name__ == .__main__.:

[coverage:xml]
output=coverage.xml
